<resources>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Bando Manager</string>
    <string name="notice">NOTICE TO USERS</string>
    <string name="notice_details">Due to android privacy policy updates, some features of this app requires user to grant permission to collect network usage statistics for better performance\n\nTo continue allow this app to collect network usage statistics data by clicking the button bellow.</string>
    <string name="kifurushi_app">Bando Manager</string>
    <string name="grant_required_permission">Grant required permissions</string>
    <string name="cellular">Cellular</string>
    <string name="cellular_data">Cellular</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="cancel">Cancel</string>
    <string name="add_new">Set New</string>
    <string name="data_usage_this_week">Data usage this week</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="continue_without_account">CONTINUE WITHOUT ACCOUNT</string>
    <string name="permission_text">Please click button Grant permission, then select Bando Manager and  Permit usage access</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="or_enter_time_range_to_get_statistics">Or enter Time range to get statistics</string>
    <string name="start_time_or_date">Start time or date</string>
    <string name="end_time_or_date">End time or date</string>
    <string name="get_usage_statistics">Get usage statistics</string>
    <string name="total">Total</string>
    <string name="downloads">Downloads</string>
    <string name="uploads">Uploads</string>
    <string name="this_week">This week</string>
    <string name="manage_and_monitor_data_used_by_apps_and_get_notified_when_maximum_value_is_reached">Manage and monitor data used by apps and get notified when maximum value is reached</string>
    <string name="if_you_found_unusual_data_consumption_compared_to_your_service_provider_report_it_to_the_authorities">If you found unusual data consumption compared to your service provider report it to the authorities.</string>
    <string name="app_constitute_to_this_usage">App(s) constitute to this usage</string>
    <string name="no_threshold_value">No threshold data set</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Phone number*</string>
    <string name="mkoa">Select region</string>
    <string name="wilaya">Select district</string>
    <string name="sehemu_uliyopo">Place you are living</string>
    <string name="chagua_aina_ya_taarifa">Type of incident</string>
    <string name="title">Title</string>
    <string name="kichwa_cha_lalamiko">Title of incident</string>
    <string name="kata">Ward</string>
    <string name="kijiji">Village</string>
    <string name="record_audio">Record audio</string>
    <string name="write_a_message">Write a message</string>
    <string name="full_name">Full name*</string>
    <string name="welcome">Welcome</string>
    <string name="no_apps_to_display">No data used </string>
    <string name="diff_txt">The difference between start time and end time must be 2 or more hours</string>
    <string name="view_all_applications">View all applications</string>
    <string name="english">English</string>
    <string name="select_language">Select language</string>
    <string name="swahili">Swahili</string>
    <string name="settings">Settings</string>
    <string name="change_language">Badili lugha</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_and_review">Rate and review</string>
    <string name="complaints">Complaints</string>
    <string name="share_message">Try Bando Manager to monitor and manage your daily data usage whether it is Cellular or Wi-Fi data. Click the link below to download it from google play store</string>
    <string name="pick_time">Select time</string>
    <string name="today">Today</string>
    <string name="enter_new_threshold">Enter new threshold</string>
    <string name="cellular_threshold">Cellular Threshold</string>
    <string name="wi_fi_threshold">Wi-Fi Threshold</string>
    <string name="zero_cannot_be_used">Zero (0) can not be used to set threshold value</string>
    <string name="too_large_threshold">The value of the threshold is too large</string>
    <string name="threshold_success">Threshold value created successfully!</string>
    <string name="confirm">Confirm</string>
    <string name="enter_valid_number">Please enter a valid number</string>
    <string name="cellular_threshold_dialog_message">Set cellular data threshold\nEnter a value (In MB)</string>
    <string name="wifi_threshold_dialog_message">Set Wi-Fi data threshold\nEnter a value (In MB)</string>
    <string name="allow_usage_access">Access to usage statistics</string>
    <string name="allow_access_to_phone_state">Access to phone state</string>
    <string name="allow_this_app_to_draw_over_other_apps">Draw over other apps</string>
    <string name="allow_this_app_to_show_notification">Show notification</string>
    <string name="allow_this_app_to_fetch_usage_statistics_of_other_apps">Allow this app to fetch usage statistics of other installed apps</string>
    <string name="grant_access_to_phone_network_state">Grant access to phone network state</string>
    <string name="allow_this_app_to_display_popup_message">Allow this app to display popup message (notification)</string>
    <string name="allow_this_app_to_display_notification">Allow this app to display notification</string>
    <string name="read_files">Read file storage</string>
    <string name="needed_to_access_your_files_when_sending_complaints">Needed to access your files when sending complaints to TCRA-CC</string>
    <string name="notifications">Notifications</string>
    <string name="this_permission_is_required_so_we_can_show_you_notifications">This permission is required so we can show you notifications (Enabled by default)</string>
    <string name="permissions">Permissions</string>
    <string name="grant_permissions_listed_below">Grant permissions listed below to continue</string>
    <string name="next">Next</string>
    <string name="grant_all_permissions">Grant all the required permissions</string>
    <string name="permission_granted">Permission granted successful</string>
    <string name="empty_start_time">Start time can not be empty</string>
    <string name="empty_end_time">End time can not be empty</string>
    <string name="failed_to_send_complaint">Failed to post your incident due to an error</string>
    <string name="follow">FOLLOW</string>
    <string name="following_complaint">Following complaint</string>
    <string name="enter_message">Enter descriptions</string>
    <string name="make_sure_you_fill">Make sure you have filled all the required fields before you submit this incident</string>
    <string name="ok_">OK</string>
    <string name="you_must_enter_description">You must enter description before you submit</string>
    <string name="valid_phone_error">Enter a valid phone number</string>
    <string name="speak_something">Hold mic and speak something. Release the mic to save and send your complaint</string>
    <string name="maximun_value_reached">You have reached the maximum threshold</string>
    <string name="save_threshold">Save</string>
    <string name="select_new_threshold_value">Select new threshold value</string>
    <string name="percentage_label">In percentage (%)</string>
    <string name="report_incident">Report Incident</string>
    <string name="please_wait">Please wait…</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="failed">Failed!</string>
    <string name="unable_to_reach_server_error">Unable to reach Bando Manager check your internet connection or try again later</string>
    <string name="complaint_submission_date">submission date</string>
    <string name="incident_title">Incident title</string>
    <string name="status">Status</string>
    <string name="change_start_day_of_week">Change start day of week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="select_day">Select day</string>
    <string name="disclaimer">Notice to users</string>
    <string name="disclaimer_txt">
        Bando Manager does not allow you to monitor the usage of cellular and Wi-fi data for less than two hours.\n\nBando Manager allows you to access weekly data usage from Sunday up to current day\n\nBando Manager gives you the option to set the first day of the week \n\nBando Manager allows you to set a threshold following the usage of either mobile data or wi-fi data\n\nBando Manager allow you to send and track complaints, suggestions, inquiries and compliments direct to TCRA-CCC
    </string>
    <string name="data_used_this_week">Data used this week</string>
    <string name="french">French</string>
    <string name="complaint_to">Select service provider</string>
    <string name="enter_description">Enter description*</string>
    <string name="enter_your_message_bellow">Enter your message below</string>
    <string name="required_descriptions">Description is required</string>
    <string name="you_don_t_have_any_history_of_reported_incident_yet">You don\'t have any history of reported incident yet\nTap  \" + \"  icon at the bottom right corner to report</string>
    <string name="means_required_field"> <b><i>*</i></b>\t required field</string>
    <string name="user_name_required">Full name is required</string>
    <string name="data_used_from">Data usage from</string>
    <string name="data_used_notif">Data used in </string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="first_day_updated">First day updated successfully</string>
    <string name="Language_changed_successfullly">Language changed successfully</string>
    <string name="search_apps">Search apps</string>
    <string name="will_replace_existing">The value you enter will replace the existing one</string>
    <string name="allow">Allow</string>
    <string name="complaints_">Complaint</string>
    <string name="congratulation">Congratulation</string>
    <string name="inquiries">Inquiry</string>
    <string name="sugestions">Suggestion</string>
    <string name="je_umeshawasilisha_lalamiko_lako_kwa_mtoa_huduma">Have you submitted your complaint to the service provider?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_reference_number">Enter reference number*</string>
    <string name="reference_number">Reference number*</string>
    <string name="ticket_required">Reference number is required</string>
    <string name="valid_reference">Enter valid reference number</string>
    <string name="you_must">You must first submit the issue to your service provider</string>
    <string name="threshold">Threshold</string>
    <string name="hrs_4">4 hours</string>
    <string name="hrs_8">8 hours</string>
    <string name="hrs_12">12 hours</string>
    <string name="day_1">1 day</string>

    <string-array name="days">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
</resources>