<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".onboarding.DisclaimerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/android_mobile"
        app:liftOnScroll="true">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MediumTextAppearanceBold"
                android:text="@string/disclaimer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                android:text="@string/disclaimer_txt"
                android:textAppearance="@style/SmallTextAppearance"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:background="@drawable/purple_btn"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/_10sdp"
        android:textAppearance="@style/SmallTextAppearanceBold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        app:drawableTint="@color/white"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:id="@+id/disclaimerNext"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>