<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".permission.UsageAccessFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textContainer"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_undraw_apps"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_above="@id/nextBtn"
        android:id="@+id/textContainer"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/MediumTextAppearanceBold"
            android:text="@string/allow_usage_access"
            android:padding="5dp"
            android:textColor="@color/primaryText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/SmallTextAppearance"
            android:text="@string/allow_this_app_to_fetch_usage_statistics_of_other_apps"
            android:textColor="@color/secondaryText"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/purple_btn"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="@color/white"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textAppearance="@style/SmallTextAppearance"
        android:textColor="@color/white" />

</RelativeLayout>