<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.LanguageSelectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textAppearance="@style/MediumTextAppearance"/>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/englishSelection"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/flag_of_great_britain"/>
            <androidx.legacy.widget.Space
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_50sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/english"
                android:textAppearance="@style/SmallTextAppearanceBold"/>
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swahiliSelection"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/flag_of_tanzania"/>
            <androidx.legacy.widget.Space
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_50sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/swahili"
                android:textAppearance="@style/SmallTextAppearanceBold"/>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>