<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/bottomSheetStyle"
    android:id="@+id/recordBottomSheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallTextAppearanceBold"
            android:padding="@dimen/_5sdp"
            android:text="@string/select_language"
            android:textColor="@color/secondaryText"
            android:layout_marginTop="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_baseline_language_24"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            app:drawableTint="@color/secondaryText" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:text="@string/english"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textAppearance="@style/SmallTextAppearance"
            android:id="@+id/english"/>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:text="@string/swahili"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textAppearance="@style/SmallTextAppearance"
            android:id="@+id/swahili"/>

        <!--<androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:text="@string/french"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textAppearance="@style/SmallTextAppearance"
            android:id="@+id/french"/>-->


        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>

    </LinearLayout>

</FrameLayout>